Swagger DOC для взаимодействия с профилем
